tests/lime/fail/tokens/macro_rest/byte_46.wsa
macro m. [push 46] m.
